--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@400;500;700&display=swap');
 
 * {
-    font-family: sans-serif;
+    font-family: 'Geologica', sans-serif;
     padding: 0;
     margin: 0;
 }
@@ -27,7 +28,7 @@ nav {
     height: 2rem;
     position: fixed;
 
-    box-shadow: 0rem 0rem 1rem var(--shadow);
+    box-shadow: 0rem .2rem 1rem var(--shadow);
     background-color: var(--black);
     color: var(--white);
 }
@@ -44,7 +45,7 @@ div.nav {
     align-items: center;
 
     width: 20rem;
-    margin-right: 1rem;
+    margin-right: 3rem;
 }
 
 header {
@@ -73,4 +74,3 @@ header > p {
     font-weight: 500;
     font-size: 2rem;
 }
-
