--- a/index.css
+++ b/index.css
@@ -8,14 +8,17 @@
 }
 
 :root {
-    --black: #151515;
-    --white: #eff0d1;
-    --shadow: #2020208f;
+    --black: #111111;
+    --white: #d8d3c7;
+    --brown: #4F3824;
+    --shadow: #1b1b1b6e;
 }
 
 body {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+
+    background-color: var(--white);
 }
 
 nav {
@@ -33,7 +36,7 @@ nav {
     color: var(--white);
 }
 
-img {
+img.d1 {
     position: absolute;
     translate: 1rem 2rem;
 }
@@ -44,8 +47,8 @@ div.nav {
     justify-content: space-between;
     align-items: center;
 
-    width: 20rem;
-    margin-right: 3rem;
+    width: 21rem;
+    margin-right: 4rem;
 }
 
 header {
@@ -54,10 +57,12 @@ header {
     justify-content: center;
     align-items: center;
 
+    width: 100%;
     height: 100%;
 
     background-image: url(images/header.jpg);
     background-position: center center;
+    background-attachment: fixed;
     background-size: cover;
 
     cursor: default;
@@ -73,4 +78,84 @@ header > p {
     font-family: 'Noto Sans', sans-serif;
     font-weight: 500;
     font-size: 2rem;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 100%;
+
+    box-shadow: 0rem -.2rem 1.5rem var(--shadow);
+}
+
+section.light {
+    display: flex;
+    flex-direction: row;
+
+    width: 80%;
+    padding: 1rem;
+    height: 100%;
+
+    background-color: #e6e1d7;
+    box-shadow: 0px 0px 10px var(--shadow);
+}
+
+aside.light > img {
+    box-shadow: 7px 7px 4px var(--shadow);
+    margin-right: 1rem;
+    width: 15rem;
+}
+
+article.light > h1 {
+    text-shadow: 3px 3px 2px var(--shadow);
+    margin-bottom: 1rem;
+    font-size: 3rem;
+}
+
+section.dark {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+
+    background-color: var(--black);
+    color: var(--white);
+}
+
+section.dark > h1 {
+    margin: 1.5rem 0rem 2rem 0rem;
+    font-size: 2.2rem;
+}
+
+div#container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 70%;
+    margin-bottom: 2rem;
+}
+
+img.fotos {
+    width: 10rem;
+}
+
+::-webkit-scrollbar {
+    width: .6rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #eff0d18a;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #eff0d1de
+}
+
+::-webkit-scrollbar-track {
+    background-color: #1d1d1d;
 }
