--- a/index.css
+++ b/index.css
@@ -98,7 +98,7 @@ section.light {
     padding: 1rem;
     height: 100%;
 
-    background-color: #e6e1d7;
+    background-color: #f7f6f2;
     box-shadow: 0px 0px 10px var(--shadow);
 }
 
