--- a/index.css
+++ b/index.css
@@ -61,22 +61,23 @@ header {
     width: 100%;
     height: 100%;
 
-    background-image: url(images/header.jpg);
+    background-image: url(images/lenço\ dbv.jpg);
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
 
     cursor: default;
+    color: var(--whiteSheet);
 }
 
 header > h1 {
     font-family: 'Noto Sans', sans-serif;;
     font-size: 5rem;
-    text-shadow: .2rem .2rem .3rem var(--shadow);
+    text-shadow: 0rem 0rem .8rem #151515c4;
 }
 
 header > p {
-    text-shadow: .2rem .2rem .3rem var(--shadow);
+    text-shadow: 0rem 0rem .8rem #151515c4;
     font-family: 'Noto Sans', sans-serif;
     font-weight: 500;
     font-size: 2rem;
@@ -150,10 +151,39 @@ section.content1 {
     flex-direction: column;
 
     width: 80%;
-    padding: 1rem;
+    padding: 1rem 2rem 1rem 2rem;
 
     background-color: var(--whiteSheet);
     box-shadow: 0px 0px 10px var(--shadow);
+}
+
+section.content1 > h1 {
+    align-self: center;
+    margin-bottom: 2rem;
+
+    text-shadow: 3px 3px 2px var(--shadow);
+    font-size: 2.8rem;
+}
+
+article.toLeft {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+article.toLeft > img {
+    margin-left: 1rem;
+    width: 25rem;
+    box-shadow: 7px 7px 4px var(--shadow);
+}
+
+article.toLeft > div > h2 {
+    margin-bottom: 1rem;
+    font-size: 2rem;
+}
+
+article.toLeft > div > p {
+    line-height: 1.4rem;
+    font-size: 1.1rem;
 }
 
 ::-webkit-scrollbar {
