--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ header {
     width: 100%;
     height: 100%;
 
-    background-image: url(images/header.jpg);
+    background-image: url(images/marcha-chuva.jpg);
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
@@ -78,7 +78,7 @@ header {
 header > h1 {
     font-family: 'Noto Sans', sans-serif;
     font-size: 5rem;
-    color: #000;
+    color: var(--whiteSheet);
     text-shadow: 0rem 0rem .6rem #151515c4;
 }
 
