--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 
 * {
     font-family: 'Geologica', sans-serif;
@@ -39,12 +41,18 @@ nav {
 
     box-shadow: 0rem .2rem 1rem var(--shadow);
     background-color: var(--black);
+
+    font-family: 'Jost';
     color: var(--white);
 }
 
 img.d1 {
     position: absolute;
     translate: .9rem 2rem;
+}
+
+.mark {
+    margin: 0 0 0 .5rem;
 }
 
 div.nav {
@@ -156,6 +164,11 @@ article.us > div > h1 {
 
     font-size: 2.6rem;
     text-shadow: 3px 3px 2px var(--shadow);
+}
+
+#handWriting {
+    font-family: 'Kaushan Script', cursive;
+    margin: 0 4px 0 0;
 }
 
 section.dark {
